problems fixed and titles aligned

--- a/styles.css
+++ b/styles.css
@@ -51,11 +51,11 @@ html {
 .Guidelines-List-Mobile ul{
     font-size: 18px;
     text-align: left;
-    list-style: disc inside;
+    list-style: disc outside;
     margin: 0 auto;
-    background-color: lightblue;
+    background-color: #A0AFB1;
     height: 300px;
-    min-width: 600px;
+    min-width: 800px;
     width: 100%;
     border-radius: 20px;
     transition: 0.2s ease-in-out;
@@ -75,20 +75,35 @@ opacity: 80%;
     text-align: center;
 }
 
+.Guidelines-Box-Title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .Guidelines-List-Desktop ul{
    font-size: 18px;
     text-align: left;
-    list-style: disc inside;
+    list-style: disc outside;
     margin: 0 auto;
-    background-color: lightblue;
+    background-color: #A0AFB1;
     height: 300px;
-    min-width: 600px;
+    min-width: 800px;
     width: 100%;
     border-radius: 20px;
     transition: 0.2s ease-in-out;
     transform: scale(1);
 }
 
+.Guidelines-List-Desktop ul li{
+    margin: 10px 0;
+    text-align: center;
+}
+
+.Guidelines-List-Desktop ul li span{
+    color:black;
+    text-align: center;
+}
 
 
 .Guidelines-List-Desktop{
@@ -104,6 +119,7 @@ opacity: 80%;
 
 .Guidelines-Wrapper{
 display: flex;
+flex-wrap: wrap;
 justify-content: space-between;
 align-items: center;
 gap: 20px; 
